@@ -174,7 +174,8 @@ page_header :: Override the default header used for pages
 show_html :: The html to use for displaying the value for an object field.  Should be a proc that takes the
              model object, column symbol, type symbol, and request and returns the html to use.
 table_class :: The html class string to use for the browse and search tables
-erb_options :: Hash with options passed to erb, e.g. <tt>erb_options: {:layout => :formelayout}</tt> (Sinatra only).
+view_options :: Hash with options passed when rendering the view (how these options are used varies
+                in each of the supported web frameworks), e.g. <tt>view_options: {:layout => :formelayout}</tt>
 
 These hook options should be callable objects that are called with the model object and the request.
 
